Updated text on about page. Added Google site info to index.html Added tags for new about page to master.css

--- a/html/css/master.css
+++ b/html/css/master.css
@@ -17,6 +17,12 @@ p {
 	padding: 0;	
 }
 
+font.about-keywords {
+        font-weight: bold;
+        font-size: larger;
+        color:#69AF93;
+}
+
 div.links {
 	width: 11em;
 	font-size: 0.8em;
